--- a/sg.config.yaml
+++ b/sg.config.yaml
@@ -776,6 +776,7 @@ commandsets:
       - zoekt-webserver-1
 
   dotcom:
+    requiresDevPrivate: false
     <<: *enterprise_set
     env:
       SOURCEGRAPHDOTCOM_MODE: true
